# MeshConversion

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  exodus_converter.cxx  exodus_fix.py  vtkGmshReader.cxx  vtkGmshReader.h
include/: mesh_converter.h  vtkGmshWriter.h  vtkTriangleReader.h  vtkTriangleWriter.h
src/: mesh_converter.cxx  vtkGmshWriter.cxx  vtkTriangleReader.cxx  vtkTriangleWriter.cxx
tests/: gmsh_data.msh  test_mesh_conversion.cxx
